# manjoo-pypi

./: Cargo.toml  README.md  pyproject.toml  test.py
.github/workflows/: CI.yml
src/: constants.rs  lib.rs  manjoo.rs  tomato.rs
