[package]
name = "manjoo-pypi"
version = "0.31.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "manjoo_pypi"
crate-type = ["cdylib"]

[dependencies]
manjoo = { version="0.1.1" }
pyo3 = { version = "0.22.0", features = ["extension-module"] }
ratatui = { version = "0.29.0", features = ["all-widgets", "palette", "termwiz"] }
